# Dinosaur-game

./: Cargo.toml  README.md
src/: dinosaur.rs  game.rs  main.rs  obstacle.rs
